[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/Menu.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Ghost1.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Ghost0.png" type="Texture" id=3]
[ext_resource path="res://Scripts/Ghost_In_Menu.gd" type="Script" id=4]

[node name="Menu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start" type="Button" parent="."]
anchor_left = 0.45
anchor_top = 0.5
anchor_right = 0.55
anchor_bottom = 0.5
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Info" type="Button" parent="."]
anchor_left = 0.45
anchor_top = 0.55
anchor_right = 0.55
anchor_bottom = 0.55
text = "Info"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
anchor_left = 0.45
anchor_top = 0.6
anchor_right = 0.55
anchor_bottom = 0.6
text = "Shop"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ghost" type="Sprite" parent="."]
position = Vector2( 52.3842, 98.4188 )
texture = ExtResource( 2 )
script = ExtResource( 4 )

[node name="Ghost2" type="Sprite" parent="."]
position = Vector2( 464.423, 426.368 )
texture = ExtResource( 2 )
script = ExtResource( 4 )

[node name="Ghost3" type="Sprite" parent="."]
position = Vector2( 847.319, 138.816 )
texture = ExtResource( 3 )
script = ExtResource( 4 )

[connection signal="pressed" from="Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="Info" to="." method="_on_Info_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_Shop_pressed"]
